part3/e302/manifests/ping-pong/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ping-pong-ingress
  namespace: exercises
spec:
  rules:
  - http:
      paths:
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: ping-pong-svc
            port:
              number: 80

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: seedimage-ing
# spec:
#   rules:
#   - http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: seedimage-svc
#             port:
#               number: 80
